dart/cpp/public/filament-dart.h

typedef struct Camera *CameraRef;
typedef struct Engine *EngineRef;
typedef struct Fence *FenceRef;
typedef struct Scene *SceneRef;
///
/// Math types
///

typedef struct {
  float x;
  float y;
  float z;
} Vector3, *Vector3Ref;
typedef struct {
  float x;
  float y;
  float z;
  float w;
} Vector4, *Vector4Ref;
typedef struct {
  union {
    float v[16];
    float m[4][4];
  };
} Matrix4x4, *Matrix4x4Ref;
void filament_camera_set_shift(CameraRef camera, double shiftX, double shiftY);
void filament_camera_set_lookat(CameraRef camera, double eyeX, double eyeY, double eyeZ, double centerX, double centerY, double centerZ, double upX, double upY, double upZ);
void filament_camera_set_exposure(CameraRef camera, float aperture, float shutterSpeed, float sensitivity);
float filament_camera_get_near(CameraRef camera);
float filament_camera_get_culling_far(CameraRef camera);
void filament_camera_get_projection_matrix(CameraRef camera, Matrix4x4* result);
void filament_camera_get_culling_projection_matrix(CameraRef camera, Matrix4x4* result);
Vector4 filament_camera_get_scaling(CameraRef camera);
Vector3 filament_camera_get_position(CameraRef camera);
Vector3 filament_camera_get_left_vector(CameraRef camera);
Vector3 filament_camera_get_up_vector(CameraRef camera);
Vector3 filament_camera_get_forward_vector(CameraRef camera);
float filament_camera_get_aperture(CameraRef camera);
float filament_camera_get_shutter_speed(CameraRef camera);
float filament_camera_get_sensitivity(CameraRef camera);
double filament_camera_get_focal_length(CameraRef camera);
void filament_camera_set_focus_distance(CameraRef camera, float distance);
float filament_camera_get_focus_distance(CameraRef camera);
double filament_camera_compute_effective_focal_length(double focalLength, double focusDistance);
double filament_camera_compute_effective_fov(double fovInDegrees, double focusDistance);
SceneRef filament_engine_create_scene(EngineRef engine);
void filament_destroy_scene(SceneRef scene);
///
/// Fence
///
FenceRef filament_engine_create_fence(EngineRef engine);
void filament_destroy_fence(FenceRef fence);
int filament_fence_wait(FenceRef fence, int mode, long long timeoutMS);