dart/filament/lib/src/generated/native_gen.dart


  late final _filament_camera_set_shiftPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              CameraRef, ffi.Double, ffi.Double)>>('filament_camera_set_shift');
  late final _filament_camera_set_shift = _filament_camera_set_shiftPtr
      .asFunction<void Function(CameraRef, double, double)>();

  void filament_camera_set_lookat(
    CameraRef camera,
    double eyeX,
    double eyeY,
    double eyeZ,
    double centerX,
    double centerY,
    double centerZ,
    double upX,
    double upY,
    double upZ,
  ) {
    return _filament_camera_set_lookat(
      camera,
      eyeX,
      eyeY,
      eyeZ,
      centerX,
      centerY,
      centerZ,
      upX,
      upY,
      upZ,
    );
  }

  late final _filament_camera_set_lookatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              CameraRef,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double)>>('filament_camera_set_lookat');
  late final _filament_camera_set_lookat =
      _filament_camera_set_lookatPtr.asFunction<
          void Function(CameraRef, double, double, double, double, double,
              double, double, double, double)>();

  void filament_camera_set_exposure(
    CameraRef camera,
    double aperture,
    double shutterSpeed,
    double sensitivity,
  ) {
    return _filament_camera_set_exposure(
      camera,
      aperture,
      shutterSpeed,
      sensitivity,
    );
  }

  late final _filament_camera_set_exposurePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(CameraRef, ffi.Float, ffi.Float,
              ffi.Float)>>('filament_camera_set_exposure');
  late final _filament_camera_set_exposure = _filament_camera_set_exposurePtr
      .asFunction<void Function(CameraRef, double, double, double)>();

  double filament_camera_get_near(
    CameraRef camera,
  ) {
    return _filament_camera_get_near(
      camera,
    );
  }

  late final _filament_camera_get_nearPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(CameraRef)>>(
          'filament_camera_get_near');
  late final _filament_camera_get_near =
      _filament_camera_get_nearPtr.asFunction<double Function(CameraRef)>();

  double filament_camera_get_culling_far(
    CameraRef camera,
  ) {
    return _filament_camera_get_culling_far(
      camera,
    );
  }

  late final _filament_camera_get_culling_farPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(CameraRef)>>(
          'filament_camera_get_culling_far');
  late final _filament_camera_get_culling_far =
      _filament_camera_get_culling_farPtr
          .asFunction<double Function(CameraRef)>();

  void filament_camera_get_projection_matrix(
    CameraRef camera,
    ffi.Pointer<Matrix4x4> result,
  ) {
    return _filament_camera_get_projection_matrix(
      camera,
      result,
    );
  }

  late final _filament_camera_get_projection_matrixPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(CameraRef, ffi.Pointer<Matrix4x4>)>>(
      'filament_camera_get_projection_matrix');
  late final _filament_camera_get_projection_matrix =
      _filament_camera_get_projection_matrixPtr
          .asFunction<void Function(CameraRef, ffi.Pointer<Matrix4x4>)>();

  void filament_camera_get_culling_projection_matrix(
    CameraRef camera,
    ffi.Pointer<Matrix4x4> result,
  ) {
    return _filament_camera_get_culling_projection_matrix(
      camera,
      result,
    );
  }

  late final _filament_camera_get_culling_projection_matrixPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(CameraRef, ffi.Pointer<Matrix4x4>)>>(
      'filament_camera_get_culling_projection_matrix');
  late final _filament_camera_get_culling_projection_matrix =
      _filament_camera_get_culling_projection_matrixPtr
          .asFunction<void Function(CameraRef, ffi.Pointer<Matrix4x4>)>();

  Vector4 filament_camera_get_scaling(
    CameraRef camera,
  ) {
    return _filament_camera_get_scaling(
      camera,
    );
  }

  late final _filament_camera_get_scalingPtr =
      _lookup<ffi.NativeFunction<Vector4 Function(CameraRef)>>(
          'filament_camera_get_scaling');
  late final _filament_camera_get_scaling =
      _filament_camera_get_scalingPtr.asFunction<Vector4 Function(CameraRef)>();

  Vector3 filament_camera_get_position(
    CameraRef camera,
  ) {
    return _filament_camera_get_position(
      camera,
    );
  }

  late final _filament_camera_get_positionPtr =
      _lookup<ffi.NativeFunction<Vector3 Function(CameraRef)>>(
          'filament_camera_get_position');
  late final _filament_camera_get_position = _filament_camera_get_positionPtr
      .asFunction<Vector3 Function(CameraRef)>();

  Vector3 filament_camera_get_left_vector(
    CameraRef camera,
  ) {
    return _filament_camera_get_left_vector(
      camera,
    );
  }

  late final _filament_camera_get_left_vectorPtr =
      _lookup<ffi.NativeFunction<Vector3 Function(CameraRef)>>(
          'filament_camera_get_left_vector');
  late final _filament_camera_get_left_vector =
      _filament_camera_get_left_vectorPtr
          .asFunction<Vector3 Function(CameraRef)>();

  Vector3 filament_camera_get_up_vector(
    CameraRef camera,
  ) {
    return _filament_camera_get_up_vector(
      camera,
    );
  }

  late final _filament_camera_get_up_vectorPtr =
      _lookup<ffi.NativeFunction<Vector3 Function(CameraRef)>>(
          'filament_camera_get_up_vector');
  late final _filament_camera_get_up_vector = _filament_camera_get_up_vectorPtr
      .asFunction<Vector3 Function(CameraRef)>();

  Vector3 filament_camera_get_forward_vector(
    CameraRef camera,
  ) {
    return _filament_camera_get_forward_vector(
      camera,
    );
  }

  late final _filament_camera_get_forward_vectorPtr =
      _lookup<ffi.NativeFunction<Vector3 Function(CameraRef)>>(
          'filament_camera_get_forward_vector');
  late final _filament_camera_get_forward_vector =
      _filament_camera_get_forward_vectorPtr
          .asFunction<Vector3 Function(CameraRef)>();

  double filament_camera_get_aperture(
    CameraRef camera,
  ) {
    return _filament_camera_get_aperture(
      camera,
    );
  }

  late final _filament_camera_get_aperturePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(CameraRef)>>(
          'filament_camera_get_aperture');
  late final _filament_camera_get_aperture =
      _filament_camera_get_aperturePtr.asFunction<double Function(CameraRef)>();

  double filament_camera_get_shutter_speed(
    CameraRef camera,
  ) {
    return _filament_camera_get_shutter_speed(
      camera,
    );
  }

  late final _filament_camera_get_shutter_speedPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(CameraRef)>>(
          'filament_camera_get_shutter_speed');
  late final _filament_camera_get_shutter_speed =
      _filament_camera_get_shutter_speedPtr
          .asFunction<double Function(CameraRef)>();

  double filament_camera_get_sensitivity(
    CameraRef camera,
  ) {
    return _filament_camera_get_sensitivity(
      camera,
    );
  }

  late final _filament_camera_get_sensitivityPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(CameraRef)>>(
          'filament_camera_get_sensitivity');
  late final _filament_camera_get_sensitivity =
      _filament_camera_get_sensitivityPtr
          .asFunction<double Function(CameraRef)>();

  double filament_camera_get_focal_length(
    CameraRef camera,
  ) {
    return _filament_camera_get_focal_length(
      camera,
    );
  }

  late final _filament_camera_get_focal_lengthPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(CameraRef)>>(
          'filament_camera_get_focal_length');
  late final _filament_camera_get_focal_length =
      _filament_camera_get_focal_lengthPtr
          .asFunction<double Function(CameraRef)>();

  void filament_camera_set_focus_distance(
    CameraRef camera,
    double distance,
  ) {
    return _filament_camera_set_focus_distance(
      camera,
      distance,
    );
  }

  late final _filament_camera_set_focus_distancePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CameraRef, ffi.Float)>>(
          'filament_camera_set_focus_distance');
  late final _filament_camera_set_focus_distance =
      _filament_camera_set_focus_distancePtr
          .asFunction<void Function(CameraRef, double)>();

  double filament_camera_get_focus_distance(
    CameraRef camera,
  ) {
    return _filament_camera_get_focus_distance(
      camera,
    );
  }

  late final _filament_camera_get_focus_distancePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(CameraRef)>>(
          'filament_camera_get_focus_distance');
  late final _filament_camera_get_focus_distance =
      _filament_camera_get_focus_distancePtr
          .asFunction<double Function(CameraRef)>();

  double filament_camera_compute_effective_focal_length(
    double focalLength,
    double focusDistance,
  ) {
    return _filament_camera_compute_effective_focal_length(
      focalLength,
      focusDistance,
    );
  }

  late final _filament_camera_compute_effective_focal_lengthPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'filament_camera_compute_effective_focal_length');
  late final _filament_camera_compute_effective_focal_length =
      _filament_camera_compute_effective_focal_lengthPtr
          .asFunction<double Function(double, double)>();

  double filament_camera_compute_effective_fov(
    double fovInDegrees,
    double focusDistance,
  ) {
    return _filament_camera_compute_effective_fov(
      fovInDegrees,
      focusDistance,
    );
  }

  late final _filament_camera_compute_effective_fovPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'filament_camera_compute_effective_fov');
  late final _filament_camera_compute_effective_fov =
      _filament_camera_compute_effective_fovPtr
          .asFunction<double Function(double, double)>();

  SceneRef filament_engine_create_scene(
    EngineRef engine,
  ) {
    return _filament_engine_create_scene(
      engine,
    );
  }

  late final _filament_engine_create_scenePtr =
      _lookup<ffi.NativeFunction<SceneRef Function(EngineRef)>>(
          'filament_engine_create_scene');
  late final _filament_engine_create_scene = _filament_engine_create_scenePtr
      .asFunction<SceneRef Function(EngineRef)>();

  void filament_destroy_scene(
    SceneRef scene,
  ) {
    return _filament_destroy_scene(
      scene,
    );
  }

  late final _filament_destroy_scenePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(SceneRef)>>(
          'filament_destroy_scene');
  late final _filament_destroy_scene =
      _filament_destroy_scenePtr.asFunction<void Function(SceneRef)>();

  /// Fence
  FenceRef filament_engine_create_fence(
    EngineRef engine,
  ) {
    return _filament_engine_create_fence(
      engine,
    );
  }

  late final _filament_engine_create_fencePtr =
      _lookup<ffi.NativeFunction<FenceRef Function(EngineRef)>>(
          'filament_engine_create_fence');
  late final _filament_engine_create_fence = _filament_engine_create_fencePtr
      .asFunction<FenceRef Function(EngineRef)>();

  void filament_destroy_fence(
    FenceRef fence,
  ) {
    return _filament_destroy_fence(
      fence,
    );
  }

  late final _filament_destroy_fencePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(FenceRef)>>(
          'filament_destroy_fence');
  late final _filament_destroy_fence =
      _filament_destroy_fencePtr.asFunction<void Function(FenceRef)>();

  int filament_fence_wait(
    FenceRef fence,
    int mode,
    int timeoutMS,
  ) {
    return _filament_fence_wait(
      fence,
      mode,
      timeoutMS,
    );
  }
